# stdair

./: .gitignore  .packit.yaml  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.common  CMakeLists.txt  CNAME  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  StdAirConfig.cmake.in  a00002.html  a00004.html  a00006.html  a00008.html  a00010.html  a00012.html  a00014.html  a00016.html  a00018.html  a00020.html  a00022.html  a00024.html  a00026.html  a00028.html  a00030.html  a00032.html  a00034.html  a00036.html  a00038.html  a00040.html  a00042.html  a00044.html  (+1446 more)
batches/: CMakeLists.txt  Makefile.am  stdair.cpp
db/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake
db/admin/: Makefile.am  clean_all_tables.sh  clean_all_tables.sh.in  count_a_table.sh  count_all_tables.sh.in  create_airinv_db.sh  create_airinv_db.sh.in  create_airinv_user.sh  create_airinv_user.sh.in  create_dsim_db.sh  create_dsim_user.sh  create_dsim_user.sh.in  create_tvlsim_db.sh.in  create_tvlsim_user.sh.in  dump_airinv_db_structure.sh  dump_airinv_db_structure.sh.in  dump_dsim_db_structure.sh  dump_dsim_db_structure.sh.in  dump_tvlsim_db_structure.sh.in  load_airinv_dsim_data.sh  load_airinv_dsim_data.sh.in  load_dsim_data.sh  load_dsim_data.sh.in  load_tvlsim_data.sh.in  sources.mk
db/data/: Makefile.am  create_airinv_tables.sql  create_airinv_user.sql  create_dsim_tables.sql  create_dsim_user.sql  create_tvlsim_tables.sql  create_tvlsim_user.sql  fill_airinv_tables.sql  fill_tvlsim_tables.sql  sources.mk
doc/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  doxygen_html.cfg  doxygen_html.cfg.in
doc/diagrams/: Makefile.am  ditaa.py
doc/images/: Makefile.am
doc/local/: authors.doc  help_wanted.doc  howto_release.doc  index.doc  installation.doc  stdair_footer.html  stdair_header.html  test.doc  users_guide.doc
doc/specs/: README.mediawiki  README.rst  RuleEngine.rst
doc/tutorial/: tutorial.doc
man/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  doxygen_man.cfg.in  doxygen_man1.cfg  doxygen_man1.cfg.in  doxygen_man3.cfg  doxygen_man3.cfg.in  stdair-config.doc  stdair-library.doc  stdair.doc
samples/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  demand01.csv  fare01.csv  fareError01.csv  fareError02.csv  fareError03.csv  fareError04.csv  fareError05.csv  fareError06.csv  fareError07.csv  ffDisutility.csv  frat5.csv  invdump01.csv  invdump02.csv  schedule01.csv  schedule03.csv  schedule04.csv  schedule05.csv  schedule06.csv  schedule07.csv  scheduleError01.csv  scheduleError02.csv  scheduleError03.csv  sources.mk  yieldstore01.csv  yieldstoreError01.csv
samples/HybridForecasting/: demand.csv  fare.csv  schedule.csv  yield.csv
samples/IBP_study/: demand01.csv  fare01.csv  ond01.csv  schedule01.csv  yield01.csv
samples/OldQFF/: yield.csv
samples/QForecasting/: demand.csv  fare.csv  schedule.csv  yield.csv
samples/RDS01/: demand.csv  schedule.csv  sources.mk
samples/farefamilies/: demand01.csv  demand03.csv  demand04.csv  demand05.csv  demand06.csv  demand07.csv  fare01.csv  fare02.csv  fare03.csv  fare04.csv  fare05-1.csv  fare05-2.csv  fare05.csv  fare06.csv  schedule01.csv  schedule02.csv  schedule03.csv  schedule04.csv  schedule05.csv  schedule06.csv  schedule07.csv  yield01.csv  yield02.csv  yield03.csv  yield04.csv  yield05-1.csv  yield05-2.csv  yield05.csv  yield06.csv
samples/rds01/: Makefile.am  demand.csv  demand02.csv  demand03.csv  demand05.csv  fare.csv  schedule.02csv  schedule.csv  schedule03.csv  schedule05.csv  sources.mk  yield.csv
samples/rds01.bk/: fare.csv  schedule.csv  yield.csv
samples/rds02/: demand.csv  fare.csv  schedule.csv
samples/rds03/: demand.csv  fare.csv  schedule.csv
stdair/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  STDAIR_Service.hpp  cmake_install.cmake  sources.mk  stdair_basic_types.hpp  stdair_date_time_types.hpp  stdair_demand_types.hpp  stdair_event_types.hpp  stdair_exceptions.hpp  stdair_file.hpp  stdair_inventory_types.hpp  stdair_json.hpp  stdair_maths_types.hpp  stdair_rm_types.hpp
stdair/basic/: BasConst.cpp  BasConst_BomDisplay.hpp  BasConst_BookingClass.hpp  BasConst_DefaultObject.hpp  BasConst_Event.hpp  BasConst_General.hpp  BasConst_Inventory.hpp  BasConst_Request.hpp  BasConst_SellUpCurves.hpp  BasConst_TravelSolution.hpp  BasConst_Yield.hpp  BasDBParams.cpp  BasDBParams.hpp  BasFileMgr.cpp  BasLogParams.cpp  BasLogParams.hpp  ContinuousAttributeLite.hpp  DateGenerationMethod.cpp  DateGenerationMethod.hpp  DemandGenerationMethod.cpp  DemandGenerationMethod.hpp  DictionaryManager.cpp  DictionaryManager.hpp  EventType.cpp  EventType.hpp  ForecastingMethod.cpp  ForecastingMethod.hpp  JSonCommand.cpp  JSonCommand.hpp  OptimisationMethod.cpp  OptimisationMethod.hpp  PartnershipTechnique.cpp  PartnershipTechnique.hpp  PassengerChoiceModel.hpp  PreOptimisationMethod.cpp  PreOptimisationMethod.hpp  ProgressStatus.cpp  ProgressStatus.hpp  ProgressStatusSet.cpp  ProgressStatusSet.hpp  (+14 more)
stdair/batches/: stdair.cpp
stdair/bom/: AirlineClassList.cpp  AirlineClassList.hpp  AirlineClassListKey.cpp  AirlineClassListKey.hpp  AirlineClassListTypes.hpp  AirlineFeature.cpp  AirlineFeature.hpp  AirportPair.cpp  AirportPair.hpp  AirportPairKey.cpp  AirportPairKey.hpp  AirportPairTypes.hpp  BomAbstract.hpp  BomArchive.cpp  BomArchive.hpp  BomDisplay.cpp  BomDisplay.hpp  BomHolder.hpp  BomID.hpp  BomIDTypes.hpp  BomINIImport.cpp  BomINIImport.hpp  BomJSONExport.cpp  BomJSONExport.hpp  BomJSONImport.cpp  BomJSONImport.hpp  BomKeyManager.cpp  BomKeyManager.hpp  BomManager.cpp  BomManager.hpp  BomRetriever.cpp  BomRetriever.hpp  BomRoot.cpp  BomRoot.hpp  BomRootKey.cpp  BomRootKey.hpp  BookingClass.cpp  BookingClass.hpp  BookingClassKey.cpp  BookingClassKey.hpp  (+151 more)
stdair/command/: CmdBomManager.cpp  CmdBomManager.hpp  CmdBomSerialiser.cpp  CmdBomSerialiser.hpp  CmdCloneBomManager.cpp  CmdCloneBomManager.hpp  DBManagerForAirlines.cpp  DBManagerForAirlines.hpp  sources.mk
stdair/config/: Makefile.am  (+1 more)
(+352 files in other folders)
