#
include_directories (BEFORE ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}) 

# Assembling
add_executable (${PROJECT_NAME} ${PROJECT_NAME}.cpp)
target_link_libraries (${PROJECT_NAME} 
  ${BOOST_LIBS_FOR_BIN} ${MYSQL_LIBRARIES}
  ${SOCI_LIBRARIES} ${SOCIMYSQL_LIBRARIES}
  ${STDAIR_LIB_TARGET} ${STDAIR_UICL_LIB_TARGET})

# Install binaries
install (TARGETS ${PROJECT_NAME} 
  EXPORT ${LIB_DEPENDENCY_EXPORT}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT runtime)
